[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
# Required for day 09
itertools = "0.10.5"
# Required for day 04
rust-crypto = "0.2.36"
