[package]
name = "aoc-2016"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_2016"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
# Required for day 11
itertools = "0.10.5"
# Required for day 11
pathfinding = "4.2.1"
# For days with complicated input :^)
regex = "1.7.1"
# Required for day 05
rust-crypto = "0.2.36"
